kubernetes/services/meticulous/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meticulous
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
