kubernetes/services/meticulous/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meticulous-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: met-operator
  namespace: meticulous-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: met-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: met-operator
    spec:
      automountServiceAccountToken: true
      serviceAccountName: meticulous-operator
      hostAliases:
        - ip: "172.31.0.10"
          hostnames:
            - "keycloak.cloud.danmanners.com"
            - "harbor.cloud.danmanners.com"
      containers:
        - name: operator
          image: harbor.cloud.danmanners.com/meticulous/met-operator:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
