kubernetes/services/meticulous/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meticulous-external-name
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ci.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: unifi-home.homelab.danmanners.com
