kubernetes/services/meticulous/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meticulous
  annotations:
    external-dns.alpha.kubernetes.io/controller: "false"
    external-dns.alpha.kubernetes.io/hostname: ci.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      name: Meticulous
      conditions:
        - "[STATUS] == 200"
      url: http://meticulous-frontend.meticulous.svc.cluster.local/
      method: GET
spec:
  hostnames:
    - ci.cloud.danmanners.com
  parentRefs:
    - kind: Gateway
      group: gateway.networking.k8s.io
      name: gwapi
      namespace: default
      sectionName: https-cloud
  rules:
    - name: meticulous
      backendRefs:
        - group: ""
          kind: Service
          name: meticulous-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 0s
        request: 0s
