kubernetes/services/meticulous/tcproute-grpc.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: meticulous-controller-grpc
  namespace: meticulous
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: meticulous-tcp
      namespace: default
      sectionName: controller-grpc
  rules:
    - backendRefs:
        - name: meticulous-controller
          port: 9090
